--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -12,19 +12,28 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyLogin</td>
-<td>&nbsp;</td></tr>
+<td>sanity </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyExpirence</td>
-<td>&nbsp;</td></tr>
+<td>regression </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyEducation</td>
-<td>&nbsp;</td></tr>
+<td>regression sanity </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>CreateUser</td>
-<td>&nbsp;</td></tr>
+<td>sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>NegativeTest</td>
+<td>sanity </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
