--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>TestCase2.verifyEducation()[pri:0, instance:batch_6_framework.TestCase2@4167d97b]<br/>TestCase2.verifyExpirence()[pri:15, instance:batch_6_framework.TestCase2@4167d97b]<br/></td></tr>
+<tr><td>sanity</td><td>TestCase2.CreateUser()[pri:-5, instance:batch_6_framework.TestCase2@4167d97b]<br/>TestCase2.NegativeTest()[pri:0, instance:batch_6_framework.TestCase2@4167d97b]<br/>TestCase2.verifyEducation()[pri:0, instance:batch_6_framework.TestCase2@4167d97b]<br/>TestCase2.verifyLogin()[pri:-1, instance:batch_6_framework.TestCase2@4167d97b]<br/></td></tr>
+</table>
