--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="adbc9d">  <td>21/08/05 19:16:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.CreateUser()[pri:-5, instance:batch_6_framework.TestCase2@752325ad]">CreateUser</td> 
-  <td>main@1648001170</td>   <td></td> </tr>
-<tr bgcolor="83df68">  <td>21/08/05 19:16:44</td>   <td>369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.endTest()[pri:0, instance:batch_6_framework.TestCase2@752325ad]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td>  <td>main@1648001170</td>   <td></td> </tr>
-<tr bgcolor="83df68">  <td>21/08/05 19:16:52</td>   <td>7846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.endTest()[pri:0, instance:batch_6_framework.TestCase2@752325ad]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td>  <td>main@1648001170</td>   <td></td> </tr>
-<tr bgcolor="83df68">  <td>21/08/05 19:16:41</td>   <td>-3588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.startTest()[pri:0, instance:batch_6_framework.TestCase2@752325ad]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td>  <td>main@1648001170</td>   <td></td> </tr>
-<tr bgcolor="83df68">  <td>21/08/05 19:16:49</td>   <td>4545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.startTest()[pri:0, instance:batch_6_framework.TestCase2@752325ad]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td>  <td>main@1648001170</td>   <td></td> </tr>
-<tr bgcolor="adbc9d">  <td>21/08/05 19:16:52</td>   <td>7499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.verifyLogin()[pri:-3, instance:batch_6_framework.TestCase2@752325ad]">verifyLogin</td> 
-  <td>main@1648001170</td>   <td></td> </tr>
+<tr bgcolor="659b90">  <td>21/08/05 21:28:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.CreateUser()[pri:-5, instance:batch_6_framework.TestCase2@4167d97b]">CreateUser</td> 
+  <td>main@1758624236</td>   <td></td> </tr>
+<tr bgcolor="659b90">  <td>21/08/05 21:28:33</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.NegativeTest()[pri:0, instance:batch_6_framework.TestCase2@4167d97b]">NegativeTest</td> 
+  <td>main@1758624236</td>   <td></td> </tr>
+<tr bgcolor="c9b0f5">  <td>21/08/05 21:28:12</td>   <td>-20353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.startTest()[pri:0, instance:batch_6_framework.TestCase2@4167d97b]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td>  <td>main@1758624236</td>   <td></td> </tr>
+<tr bgcolor="659b90">  <td>21/08/05 21:28:33</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.verifyEducation()[pri:0, instance:batch_6_framework.TestCase2@4167d97b]">verifyEducation</td> 
+  <td>main@1758624236</td>   <td></td> </tr>
+<tr bgcolor="659b90">  <td>21/08/05 21:28:33</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.verifyExpirence()[pri:15, instance:batch_6_framework.TestCase2@4167d97b]">verifyExpirence</td> 
+  <td>main@1758624236</td>   <td></td> </tr>
+<tr bgcolor="659b90">  <td>21/08/05 21:28:33</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.verifyLogin()[pri:-1, instance:batch_6_framework.TestCase2@4167d97b]">verifyLogin</td> 
+  <td>main@1758624236</td>   <td></td> </tr>
 </table>
